--- a/index.html
+++ b/index.html
@@ -28,7 +28,6 @@
 </header>
 
 
-
 <!-- Seção de Introdução com Imagem -->
 <section id="home" class="intro">
     <div class="intro-text">
@@ -95,15 +94,18 @@
                 <h3>Calculadora</h3>
                 <p>Uma calculadora web funcional feita com JavaScript, HTML e CSS.</p>
                 <img src="./img/projetos/calculadora1.png" alt="Imagem do projeto Calculadora">
-                <img src="./img/projetos/calculadora2.png" alt="Imagem do projeto Calculadora">
-                <a href="./calculadora/index.html" target="_blank" class="btn">Ver Projeto</a>
+                <img src="./img/projetos/calculador2.png" alt="Imagem do projeto Calculadora">
+                <a href="https://rodvpx.github.io/PaginaCalculadora/" target="_blank" class="btn">Ver Projeto</a>
             </div>
             <div class="projeto">
-                <h3>Jogo de Tabuleiro</h3>
-                <p>Jogo de tabuleiro interativo com regras personalizadas e interface dinâmica.</p>
-                <img src="./img/projetos/tabuleiro1.png" alt="Imagem do projeto Jogo de Tabuleiro">
-                <img src="./img/projetos/tabuleiro2.png" alt="Imagem do projeto Jogo de Tabuleiro">
-                <a href="./jogo-tabuleiro/index.html" target="_blank" class="btn">Ver Projeto</a>
+                <h3>Jogo Cores</h3>
+                <p>Este é um jogo simples da cor. A ideia do jogo é mostrar o
+                    nome de uma cor em um texto colorido e o jogador deve selecionar a cor correspondente entre as
+                    opções disponíveis.</p>
+                <img src="./img/projetos/jogo1.png" alt="Imagem do projeto Jogo de Tabuleiro">
+                <img src="./img/projetos/jogo2.png" alt="Imagem do projeto Jogo de Tabuleiro">
+                <img src="./img/projetos/jogo3.png" alt="Imagem do projeto Jogo de Tabuleiro">
+                <a href="https://rodvpx.github.io/PaginaJogoCores/" target="_blank" class="btn">Ver Projeto</a>
             </div>
         </div>
     </section>
